adding new html path

--- a/pom.xml
+++ b/pom.xml
@@ -148,10 +148,11 @@ the unit tests of an application.It generates reports in two different file form
 					<plugins>
     				<plugin>
        				 <!--The available options are junit, testng, html, pretty, json, usage and rerun -->
-        				<name>json</name>
-        				<extension>json</extension>
+        				<name>html</name>
+        				<extension>html</extension>
        				 <!--Optional output directory. Overrides cucumberOutputDirectory. Usefull when different plugins create files with the same extension-->
-        				<outputDirectory>${project.build.directory}/cucumber-parallel/json/</outputDirectory>
+        				<!--<outputDirectory>${project.build.directory}/cucumber-parallel/json/</outputDirectory>  -->
+        				<outputDirectory>${project.build.directory}/reports/cucumber-reports/cucumber-html-reports/</outputDirectory>
     				</plugin>
 					</plugins>
 				<strict>true</strict>
