Reverting the changes for "1.json" at line no 154

--- a/pom.xml
+++ b/pom.xml
@@ -151,7 +151,7 @@ the unit tests of an application.It generates reports in two different file form
         				<name>json</name>
         				<extension>json</extension>
        				 <!--Optional output directory. Overrides cucumberOutputDirectory. Usefull when different plugins create files with the same extension-->
-        				<outputDirectory>${project.build.directory}/cucumber-parallel/json/1.json</outputDirectory> 
+        				<outputDirectory>${project.build.directory}/cucumber-parallel/json</outputDirectory> 
     				</plugin>
 					</plugins>
 				<strict>true</strict>
